--- a/mmasgis/package.json
+++ b/mmasgis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "application-name",
-  "version": "5.1.3",
+  "version": "5.2.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -9,7 +9,9 @@
 		"express": "3.1.0",
 		"mongoose": "*",
 		"mongodb": "*",
-		"connect": "0.2.4"
+		"connect": "0.2.4",
+		"forever" :"*",
+		"underscore" : "1.5.1"
 	},
 	"devDependencies": {
 		"tap": "*"
