--- a/mmasgis/package.json
+++ b/mmasgis/package.json
@@ -1,13 +1,13 @@
 {
   "name": "application-name",
-  "version": "5.10.1",
+  "version": "5.11.1",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
 		"express": "3.1.0",
-		"mongoose": "*",
+		"mongoose": "3.6.11",
 		"mongodb": "*",
 		"connect": "0.2.4",
 		"forever" :"*",
